# AndroidNdkStudy

./: .gitignore  README.md  config.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yuntian/androidndkstudy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yuntian/androidndkstudy/: ALog.java  AppContext.java  LogUtil.java  MainActivity.java  MessageEvent.java  MyApplication.java  NativeUtil.java  ToastUtils.java
app/src/main/jni/: logUtil.h  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yuntian/androidndkstudy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
